--- a/widget.ui
+++ b/widget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Widget</string>
+   <string>Hypnosis - 催眠状态</string>
   </property>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
